--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jade": "^1.6.0",
     "multer": "^0.1.4",
     "nconf": "^0.6.9",
-    "lodash": "^2.4.1"
+    "lodash": "^2.4.1",
+    "commander": "^2.3.0"
   },
   "devDependencies": {
     "mocha": "^1.21.4",
