--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "async": "^0.9.0",
     "redis": "^0.12.1",
     "morgan": "^1.3.0",
-    "forms": "^0.9.5",
     "express": "^4.8.7",
     "request": "^2.40.0",
     "errorhandler": "^1.1.1",
@@ -29,5 +28,8 @@
     "mocha": "^1.21.4",
     "supertest": "^0.13.0",
     "fakeredis": "^0.2.1"
+  },
+  "optionalDependencies": {
+    "hiredis": "^0.1.17"
   }
 }
